# A2A-crew-test

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
src/: simple_crew.py
src/a2a_crew_test.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_crew_structure.py  test_simple_crew.py
