[project]
name = "a2a-crew-test"
version = "0.1.0"
description = "Test implementation of A2A protocol with CrewAI"
requires-python = ">=3.12"
dependencies = [
    "crewai==0.11.2",
    "langchain==0.1.20",
    "langchain-openai==0.0.5",
    "python-dotenv==1.1.0"
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"
